# super_prompt_plugin_kubectl

./: README.rst  pyproject.toml
super_prompt_plugin_kubectl/: main.py
